feat(presentation): ajout illustration genie logiciel

--- a/outils-notions-genie-logiciel-niveau-l2/presentation/base-genie-logiciel/index.html
+++ b/outils-notions-genie-logiciel-niveau-l2/presentation/base-genie-logiciel/index.html
@@ -316,6 +316,12 @@
                     </div>
                 </section>
                 <section>
+                    <h2>Métaphore Gestion de Projet</h2>
+                    <div class="illustration-md">
+                        <img src="../medias/illustration-balancoire.jpg" alt="dev" />
+                    </div>
+                </section>
+                <section>
                     <h2>Méthode itérative (agile)</h2>
                     <div class="illustration-bg">
                         <img src="../medias/lifecycle-1.png" alt="dev" />
@@ -428,7 +434,7 @@
                     <h2>Presentation Layer (couche présentation) </h2>
                     <ul>
                         <li class="fragment fade-up">Comment l'information est presentée</li>
-                        <li class="fragment fade-up">Expose un client graphique (GUI)
+                        <li class="fragment fade-up">Graphical User Interface (GUI)
                             <ul>
                                 <li class="fragment fade-up">Console: client SSH, Telnet,...</li>
                                 <li class="fragment fade-up">Lourd: Outlook, Skype,...</li>
@@ -573,7 +579,7 @@
                     <ul>
                         <li class="fragment fade-up">Logiciel destiné à être installé localement </li>
                         <li class="fragment fade-up">Possède un setup</li>
-                        <li class="fragment fade-up">Skype, Outlook</li>
+                        <li class="fragment fade-up">Exemples: Skype, Outlook</li>
                         <li class="fragment fade-up">Difficultés
                             <ul>
                                 <li class="fragment fade-up">Gestion des plateformes(linux, windows, mac,...)</li>
@@ -696,9 +702,9 @@
                     <h2>Développement Hybride</h2>
                     <ul>
                         <li class="fragment fade-up">Développer une application native</li>
-                        <li class="fragment fade-up">Baser sur le WEB</li>
+                        <li class="fragment fade-up">Basé sur le WEB</li>
                         <li class="fragment fade-up">Utiliser outil de génération de code natif</li>
-                        <li class="fragment fade-up">Un base code traduit en code natif (Adroid,iOS)</li>
+                        <li class="fragment fade-up">Un base code traduite en code natif (Adroid,iOS)</li>
                         <li class="fragment fade-up">Deux types de technologies:
                             <ul>
                                 <li class="fragment fade-up">Webview</li>
@@ -724,7 +730,7 @@
                     <ul>
                         <li class="fragment fade-up">Application - Programming - Interface</li>
                         <li class="fragment fade-up">Faire dialoguer des applications</li>
-                        <li>
+                        <li class="fragment fade-up">
                             Acteurs:
                             <ul>
                                 <li class="fragment fade-up">Producteur de service</li>
