feat(example): ajout de l'api et bootstrap

--- a/outils-notions-genie-logiciel-niveau-l2/presentation/base-genie-logiciel/index.html
+++ b/outils-notions-genie-logiciel-niveau-l2/presentation/base-genie-logiciel/index.html
@@ -556,7 +556,7 @@
                     </div>
                 </section>
                 <section>
-                    <h2>Schéma Architecture 2-tier(exemple)</h2>
+                    <h2>Schéma Architecture n-tier(exemple)</h2>
                     <div class="illustration-bg">
                         <img src="../medias/tiers-azure.png" alt="dev" />
                     </div>
